[package]
name = "sbr_broadcast"
version = "0.1.0"
edition = "2018"
default-run = "sbr_broadcast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rand = { git = "https://github.com/rust-lang-nursery/rand" }
rand = "0.8.4"
chrono = "0.4"
crossbeam = "0.7.3"

tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }

serde = { version = "~1.0", features = [ "derive" ] }
talk = { git = "https://github.com/Distributed-EPFL/talk" }

itertools = "0.10.0"

futures = { version = "0.3" }
